--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -283,6 +283,16 @@ form.edit_blog
         font-weight: bold
         font-size: 14px
 
+      span
+        border: 7px solid #E2E2E2
+        cursor: pointer
+        display: block
+        height: 120px
+        overflow: hidden
+
+      .selected span
+        border: 7px solid #F9D853
+
     .theme
       float: left
       margin-right: 20px
