posts routes modify

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -23,6 +23,6 @@
               - @target_blogs.each do |b|
                 %option{value: b.id, selected: b == @default_target_blog}
                   = b.title
-    %a.cancel{href: "/home"}
+    %a.cancel{href: root_path}
     %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
       %input{ :type => "submit", :value => " " }
