--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -15,10 +15,10 @@
           回我的主页
         = follow_tag @blog
         - if @single_post && @post.editable_by?(current_user)
-          %a.remove{href: "/posts/#{@post.id}", title: "删除",
+          %a.remove{href: post_path(@post), title: "删除",
             data: {widget: "rest", callback: "redirect", md: "delete"}}
             删除
-          %a.edit{href: "/posts/#{@post.id}/edit", title: "编辑"} 编辑
+          %a.edit{href: edit_post_path(@post), title: "编辑"} 编辑
         - if @blog.applied? current_user
           %a.btn_apply{href: editors_new_path, title: "申请加入" }
             申请加入
