--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -73,7 +73,7 @@
               %a.other_blog{href: "/home/#{b.uri}"}<
                 = b.title
         .selector_open_footer
-          %a{href: "/blogs/new"} +新建页面
+          %a{href: new_blog_path} +新建页面
     .page_operation
       %div
         %span.icon_posts &nbsp;
@@ -112,11 +112,10 @@
           =image_tag @user.primary_blog.icon.url_for(:medium)
       .post_area
         .left
-        - trailing_post_url = "/to/#{@blog.uri}"
-        %a.text{href: "/posts/new/text#{trailing_post_url}"}
-        %a.picture{href: "/posts/new/pics#{trailing_post_url}"}
-        %a.link{href: "/posts/new/link#{trailing_post_url}"}
-        %a.video{href: "/posts/new/video#{trailing_post_url}"}
+        %a.text{href: new_post_path("text", @blog)}
+        %a.picture{href: new_post_path("pics", @blog)}
+        %a.link{href: new_post_path("link", @blog)}
+        %a.video{href: new_post_path("video", @blog)}
         .right
     .timeline
       = render :partial => "posts/post_full", :collection => @posts, :as => :post
