--- a/app/views/shared/_analytics.html.haml
+++ b/app/views/shared/_analytics.html.haml
@@ -1,6 +1,7 @@
 :javascript
   window.document.addEvent("domready", function() {
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    setTimeout(function(){
     new Asset.javascript(gaJsHost + "google-analytics.com/ga.js", {
       onload: function() {
         var pageTracker = _gat._getTracker("UA-8893573-3");
@@ -8,4 +9,5 @@
         pageTracker._trackPageview();
       }
     });
+    }, 3000);
   });
