--- a/app/views/messages/_join_oper.html.haml
+++ b/app/views/messages/_join_oper.html.haml
@@ -4,8 +4,8 @@
   %div 已忽略
 - else
   %div
-    %a{href: "/messages/#{message.id}/doing", data: { widget: "rest", md: "put",
+    %a{href: messages_doing_path(message), data: { widget: "rest", md: "put",
       callback: "replace", parent: "operation" }} 通过
   %div
-    %a{href: "/messages/#{message.id}/ignore", data: { widget: "rest", md: "put",
+    %a{href: messages_ignore_path(message), data: { widget: "rest", md: "put",
       callback: "replace", parent: "operation" }} 忽略
