--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -1,6 +1,6 @@
 .page_control
   - if current_page > 1
-    %a.page_left{href: "#{base_url}/page/#{current_page - 1}"} &#8592; 过去的
+    %a.page_left{href: "#{base_url}/page/#{current_page - 1}"} &#8592; 最近的
   - if current_page != 1
     .page_number= current_page
   - if (!collection.empty? && collection.length >= per_page)
