--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -153,6 +153,29 @@ span.suggestion
   min-width: 950px
   padding-left: 10px
 
+  .save, .back
+    -moz-border-bottom-colors:  none
+    -moz-border-image:  none
+    -moz-border-left-colors:  none
+    -moz-border-right-colors:  none
+    -moz-border-top-colors:  none
+    background-color:  #aaa
+    border-color:  #C8C8C8 #B6B6B6 #B6B6B6 #C8C8C8
+    border-radius:  5px 5px 5px 5px
+    border-right:  1px solid #B6B6B6
+    border-style:  solid
+    border-width:  1px
+    color:  white
+    cursor:  pointer
+    font-size: 14px
+    padding:  6px 10px
+    text-decoration:  none
+    _padding: 6px 10px 0px 10px
+    _margin-top: 5px
+  
+  .save
+    background: #57c328
+  
 .customize_commands
   float: right
   padding: 10px
@@ -203,17 +226,17 @@ form.edit_blog
     margin-bottom: 12px
     height: 16px
 
-  label
-    margin: 0px 0px 8px 0px
-    padding: 0px
-    font-size: 18px
-    font-weight: bold
-    display: block
-
   .blog_info
     width: 380px
     height: 530px
     left: 10px
+
+    label
+      margin: 0px 0px 8px 0px
+      padding: 0px
+      font-size: 18px
+      font-weight: bold
+      display: block
 
     input
       background: url("/images/input_bg.gif") repeat-x scroll center top #FFFFFF
