--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -9,8 +9,8 @@
     %li.appearance 调整界面
     %li.advanced 高级选项
   .customize_commands
-    %a.save{href: "###", data: {widget: 'submit', form: '.edit_blog'}} 保存
-    %a.back{href: fucking_root} 取消
+    %a.button.save{href: "###", data: {widget: 'submit', form: '.edit_blog'}} 保存
+    %a.button.back{href: fucking_root} 取消
 
 = form_for(@blog) do |f|
   %fieldset.blog_info.menu
@@ -39,24 +39,26 @@
     %span#blog_icon_feed
 
   %fieldset.template.menu{class: @blog.using_custom_html? ? 'editing_custom_html' : 'picking_template'}
-    .pool{data: {widget: 'radioButton preview', contents: '.theme', fieldName: 'blog[template_id]'}}
-      - @templates.each do |t|
-        .theme{data: {value: t.id}, class: t.id == @blog.template.id ? 'selected' : ''}
-          %span
-            %img{src: t.thumbnail.url_for(:medium)}
-          .shadow
-          %div
-            %a{href: blog_path(t.author.primary_blog)}
-              = t.author.name
-            = t.name
+    .pool_field
+      .pool{data: {widget: 'radioButton preview', contents: '.theme', fieldName: 'blog[template_id]'}}
+        - @templates.each do |t|
+          .theme{data: {value: t.id}, class: t.id == @blog.template.id ? 'selected' : ''}
+            %span
+              %img{src: t.thumbnail.url_for(:medium)}
+            .shadow
+            %div
+              %a{href: blog_path(t.author.primary_blog)}
+                = t.author.name
+              = t.name
       .buttons
         %a.button{href: "###", data: {widget: 'toggler', target: 'fieldset.template',
           classes: 'editing_custom_html picking_template', field: 'blog[using_custom_html]'}}
           编辑当前模板HTML
     = f.hidden_field :using_custom_html, :value => @blog.using_custom_html ? 1 : 0
-    .custom_html
-      %textarea{name: 'blog[custom_html]'}
-        = @blog.template_in_use
+    .custom_field
+      .custom_html
+        %textarea{name: 'blog[custom_html]'}
+          = @blog.template_in_use
       .buttons
         %a.button{href: "#", data: {widget: 'diverseSubmit',
           action: '/preview', target: 'preview', methord: 'POST'}}
