--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -153,29 +153,29 @@ span.suggestion
   min-width: 950px
   padding-left: 10px
 
-  .save, .back
-    -moz-border-bottom-colors:  none
-    -moz-border-image:  none
-    -moz-border-left-colors:  none
-    -moz-border-right-colors:  none
-    -moz-border-top-colors:  none
-    background-color:  #aaa
-    border-color:  #C8C8C8 #B6B6B6 #B6B6B6 #C8C8C8
-    border-radius:  5px 5px 5px 5px
-    border-right:  1px solid #B6B6B6
-    border-style:  solid
-    border-width:  1px
-    color:  white
-    cursor:  pointer
-    font-size: 14px
-    padding:  6px 10px
-    text-decoration:  none
-    _padding: 6px 10px 0px 10px
-    _margin-top: 5px
-  
-  .save
-    background: #57c328
-  
+.button
+  -moz-border-bottom-colors:  none
+  -moz-border-image:  none
+  -moz-border-left-colors:  none
+  -moz-border-right-colors:  none
+  -moz-border-top-colors:  none
+  background-color:  #aaa
+  border-color:  #C8C8C8 #B6B6B6 #B6B6B6 #C8C8C8
+  border-radius:  5px 5px 5px 5px
+  border-right:  1px solid #B6B6B6
+  border-style:  solid
+  border-width:  1px
+  color:  white
+  cursor:  pointer
+  font-size: 14px
+  padding:  6px 10px
+  text-decoration:  none
+  _padding: 6px 10px 0px 10px
+  _margin-top: 5px
+
+.save
+  background: #57c328
+
 .customize_commands
   float: right
   padding: 10px
@@ -339,11 +339,26 @@ form.edit_blog
     .activated .image
       border: 7px solid #F9D853
 
-.pool, .custom_html
+    .custom_html
+      width: 750px
+      height: 480px
+      
+      textarea
+        width: 100%
+        height: 100%
+
+    .buttons
+      margin-top: 15px
+
+      .button
+        margin: 5px
+        background: #57C328
+
+.pool_field, .custom_field
   display: none
 
-.picking_template .pool,
-.editing_custom_html .custom_html
+.picking_template .pool_field,
+.editing_custom_html .custom_field
   display: block
 
 .customize_navigation
