--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -361,6 +361,57 @@ form.edit_blog
 .editing_custom_html .custom_field
   display: block
 
+fieldset.appearance
+  width: 320px
+  height: 530px
+  left: 130px
+
+  .box
+    height: 480px
+    overflow: auto
+
+  select
+    font-size: 18px
+    width: 130px
+  .colors
+    height: 40px
+    line-height: 40px
+    margin-bottom: 10px
+  .color_pick
+    border-color: #CCCCCC #AAAAAA #AAAAAA #CCCCCC
+    border-radius: 5px 5px 5px 5px
+    border-right: 1px solid #AAAAAA
+    border-style: solid
+    border-width: 1px
+    cursor: pointer
+    float: left
+    height: 38px
+    margin-right: 10px
+    width: 50px
+  .fonts, .booleans, .images
+    padding: 8px 0px
+  .fonts span
+    margin-right: 3px
+  .images
+    input
+      width: 130px
+      font-size: 10px
+      margin-left: 3px
+    a
+      margin-left: 3px
+      text-decoration: none
+      color: white
+      background-color: #aaa
+      border-color: #C8C8C8 #B6B6B6 #B6B6B6 #C8C8C8
+      border-radius: 5px 5px 5px 5px
+      font-size: 14px
+      padding: 4px 7px
+  .booleans
+    input
+      font-size: 18px
+    label
+      margin-left: 3px
+
 .customize_navigation
   @include clear_fix
 
