customize image upload

--- a/app/views/blogs/_template_variables.html.haml
+++ b/app/views/blogs/_template_variables.html.haml
@@ -9,7 +9,19 @@
 - @variables['bool'].each do |name, var|
   - next if var['desc'].blank?
   .booleans
+    %input{type: "hidden", value: "0", name: "blog[template_conf][bool][#{name}][value]"}
     %input{type: "checkbox", name: "blog[template_conf][bool][#{name}][value]",
       checked: (var['value'] ? "checked" : false), value: (var['value'] ? "1" : "0"), data: {widget: "checkbox_preview"}}
     %label 
       = var['desc']
+
+- @variables['image'].each do |name, var|
+  - next if var['desc'].blank?
+  .images{class: (var['value'].blank? ? "image_empty" : "image_exist"), data: {widget: "single_upload"}}
+    %span<
+      = var['desc']
+    %input.uploader{type: 'file', name: 'file', autocomplete: 'off' }
+    %a.cleaner{href: "#"} 清除背景
+    %input.url{type: 'hidden', name: "blog[template_conf][image][#{name}][value]",
+      value: var['value']}
+
