--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -406,6 +406,17 @@ fieldset.appearance
       border-radius: 5px 5px 5px 5px
       font-size: 14px
       padding: 4px 7px
+    &.image_empty
+      .uploader
+        display: auto
+      .cleaner
+        display: none
+    &.image_exist
+      .uploader
+        display: none
+      .cleaner
+        display: auto
+    
   .booleans
     input
       font-size: 18px
