--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -363,11 +363,15 @@ form.edit_blog
 
 fieldset.appearance
   width: 320px
-  height: 530px
+  height: auto
+  !important: 530px
+  max-height: 530px
   left: 130px
 
   .box
-    height: 480px
+    height: auto
+    !important: 480px
+    max-height: 480px
     overflow: auto
 
   select
