--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -22,7 +22,7 @@
       line-height: 40px
       font-size: 20px
       width: 300px
-
+    
   .page_url input
     text-align: right
 
@@ -243,6 +243,15 @@ form.edit_blog
       border: 1px solid #DDDDDD
       padding: 5px
       font-size: 18px
+
+    .textarea
+      @include border-radius(8px)
+      border: 1px solid $pink
+      background: white
+
+    textarea
+      width: 100%
+      height: 180px
 
     .who_did_this
       @include clear_fix
