--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -36,3 +36,5 @@
         %a{ :href => blog_path(post.parent.blog) }
           = post.parent.blog.title
         &#8594;
+      - unless post.tags.nil? or post.tags.empty?
+        %span= post.tags.join ','
