--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -25,7 +25,7 @@
                   = b.title
     .tags_area
       %textarea{name: "tags"}
-        = (@post.tags.nil? or @post.tags.empty?) ? '' : @post.tags.join(',')
+        = tags_value @post.tags
     %a.cancel{href: root_path}
     %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
       %input{ :type => "submit", :value => " " }
