--- a/app/views/blogs/_template_variables.html.haml
+++ b/app/views/blogs/_template_variables.html.haml
@@ -1,9 +1,9 @@
 - @variables['color'].each do |name, var|
   - next if var['desc'].blank?
   .colors
-    .color_pick{style: "background-color: #{var['value']}", data: {tgt: "color_picker"}}
+    .color_pick{style: "background-color: #{var['value']}"}
     %input{type: 'hidden', name: "blog[template_conf][color][#{name}][value]",
-      value: var['value']}
+      value: var['value'], data: {default_value: var['default_value']}}
     = var['desc']
 
 - @variables['image'].each do |name, var|
@@ -14,13 +14,13 @@
     %input.uploader{type: 'file', name: 'file', autocomplete: 'off' }
     %a.cleaner{href: "#"} 清除背景
     %input.url{type: 'hidden', name: "blog[template_conf][image][#{name}][value]",
-      value: var['value']}
+      value: var['value'], data: {default_value: var['default_value']}}
 
 - @variables['bool'].each do |name, var|
   - next if var['desc'].blank?
   .booleans
     %input{type: "hidden", value: "0", name: "blog[template_conf][bool][#{name}][value]"}
     %input{type: "checkbox", name: "blog[template_conf][bool][#{name}][value]",
-      checked: (var['value'] == "0" ? false : "checked"), value: 1, data: {widget: "checkbox_preview"}}
+      checked: (var['value'] == "0" ? false : "checked"), value: 1, data: {default_value: var['default_value'], widget: "checkbox_preview"}}
     %label 
       = var['desc']
