--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -25,7 +25,7 @@
                   = b.title
     .tags_area
       %textarea{name: "tags"}
-        = tags_value @post.tags
+        = tags_for_post_form @post, (@post.new_record?) ? @default_target_blog : nil
     %a.cancel{href: root_path}
     %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
       %input{ :type => "submit", :value => " " }
